--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+html {
+  scroll-behavior: smooth;
+}
 .App {
-  text-align: center;
+  text-align: left;
+  padding: 40px;
 }
 
 .App-logo {
@@ -28,6 +32,113 @@
   color: #61dafb;
 }
 
+/* .button-top {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 60px;
+  height: 40px;
+  background-color: #2e86de;
+  color: aliceblue;
+  border-radius: 15px;
+  border-style: none;
+  cursor: pointer;
+}
+.button-top:hover {
+  border: 3px solid #54a0ff;
+}
+
+.container {
+  width: 500px;
+  height: 300px;
+  border: 4px solid #ff9ff3;
+  border-radius: 12px;
+  position: relative;
+  
+  background-color: #d3f1f3;
+}
+.send-layout {
+  
+  position: fixed;
+  width: 500px;
+  height: 35px;
+  top:46%
+}
+.inputChat {
+  width: 75%;
+  height: 65%;
+  position: absolute;
+  bottom: 0px;
+  padding: 3px;
+  border-style: none;
+  border: 2px solid #ff9ff3;
+  border-radius: 4px;
+  outline:none;
+}
+.inputChat:hover {
+  border: 2px solid #f368e0;
+}
+.button-send {
+  cursor: pointer;
+  position: absolute;
+  right: 4px;
+  bottom: 0px;
+  width: 100px;
+  height: 100%;
+  padding: 6px;
+  border: 2px solid #ff9ff3;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.reply-text {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content:flex-end;
+    width: 100%;
+    padding-bottom: 4px;
+    padding-right: 5px;
+    
+}
+.reply-text:last-child {
+  padding-bottom: 28px;
+}
+.nameChat {
+  width:40px;
+  height: 40px;
+  padding: 3px;
+  margin-left: 6px;
+  background-color: red;
+  border-radius: 25px;
+  text-align: center;
+  
+}
+.text-chat {
+  word-wrap: break-word;
+  background-color: #ebc5e6;
+  color: #fff;
+  font-size: 1rem;
+  height: 100%;
+  max-width: 75%;
+  border: 1px solid #a1e9ee;
+  border-radius: 12px;
+  padding: 3px 6px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+.layout-text {
+  padding:3px 12px 9px 0px;
+  width: 70%;
+  height: 90%;
+  position: absolute;
+  right: 0px;
+  overflow-y: scroll;
+} */
+.img-avatar {
+  width: 400px;
+  height: 400px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
